# morepork-ui

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build_metadata.py  hook_settings.py  morepork-ui.pro
auther/: CMakeLists.txt  auther.service  client.py  json_reader.py  jsonrpc.py  morepork_ui.service  morepork_ui_classic_display.service  morepork_ui_new_display.service  use_classic_display  use_new_display
cal_prints/fire/mk14/: cal_print_abs-wss1_wss1.makerbot
calibration_prints/: check_prints.py
calibration_prints/lava/mk14_c/: calibration_abs-wss1_wss1.makerbot
calibration_prints/lava/mk14_hot/: calibration_abs-wss1_wss1.makerbot
calibration_prints/magma/mk14_c/: calibration_abs-cf10_wss1.makerbot  calibration_abs-wss1_wss1.makerbot
host/: Model.qml  Model.ui.qml  PropsView.qml  host.qrc  host_main.qml  host_model.cpp  host_model.h
morepork-ui-artifactory/: .gitignore  CMakeLists.txt  Makefile  PlatformIntrospection.cmake  README  artifacts.cpp  artifacts.h  main.cpp  moc_artifacts.cpp  morepork-ui-artifactory  morepork-ui-artifactory.pro
morepork-ui-artifactory/libarchiveqt/: Makefile
morepork-ui-artifactory/libarchiveqt/example/: Makefile  example.pro
morepork-ui-artifactory/libarchiveqt/example/archiver.app/Contents/: Info.plist
morepork-ui-artifactory/libarchiveqt/lib/: Makefile  lib.pro  libarchiveqt5.1.0.0.dylib  libarchiveqt5.dylib
morepork-ui-artifactory/libarchiveqt/lib/libarchive/lib/: libarchive.16.dylib  libarchive.dylib
morepork-ui-artifactory/libarchiveqt/lib/libarchive/lib/pkgconfig/: libarchive.pc
morepork-ui-artifactory/libarchiveqt/lib/liblzma/lib/: liblzma.5.dylib  liblzma.la
morepork-ui-artifactory/libarchiveqt/lib/liblzma/lib/pkgconfig/: liblzma.pc
qml/: CMakeLists.txt  TestLayout.ui.qml  main.qml  qml.qrc
settings/: CMakeLists.txt  mock_PID  ui_settings.json
src/: .gitignore  CMakeLists.txt  base_model.h  bot_model.cpp  bot_model.h  enum_parser.cmake  enum_parser.cpp  error_utils.h  get_mac_addr_qt.h  gui_helpers.cpp  gui_helpers.h  logging.cpp  logging.h  main.cpp  parse_pri.py  power_key_event.h  src.pri  ui_translator.h
src/dfs/: dfs_settings.cpp  dfs_settings.h
src/enum_parser/: CMakeLists.txt
src/host/: Model.qml  PropsView.qml  host.pri.backup  host_main.qml  host_model.h
src/model/: base_model.cpp  base_model.h  bot_model.cpp  bot_model.h  fre_tracker.cpp  fre_tracker.h  logger.cpp  logger.h  net_model.cpp  net_model.h  network.cpp  network.h  process_model.cpp  process_model.h  ui_event_logger.cpp  ui_event_logger.h
src/model_impl/: bot_logger.cpp  bot_logger.h  impl_util.h  kaiten_bot_model.cpp  kaiten_bot_model.h  kaiten_net_model.cpp  kaiten_net_model.h  kaiten_process_model.cpp  kaiten_process_model.h  local_jsonrpc.cpp  local_jsonrpc.h
src/print_queue/: asyncimageprovider.cpp  asyncimageprovider.h  print_queue.cpp  print_queue.h
src/qml/: AboutPage.qml  AboutPageForm.qml  AcknowledgePrintFinished.qml  AcknowledgePrintFinishedForm.qml  AdjustZOffset.qml  AdvancedInfo.qml  AdvancedInfoCalibrationElement.qml  AdvancedInfoCalibrationElementForm.qml  AdvancedInfoCalibrationItem.qml  AdvancedInfoCalibrationItemForm.qml  AdvancedInfoChamberItem.qml  AdvancedInfoChamberItemForm.qml  AdvancedInfoDragonItem.qml  AdvancedInfoDragonItemForm.qml  AdvancedInfoElement.qml  AdvancedInfoElementForm.qml  AdvancedInfoFilamentBayElement.qml  AdvancedInfoFilamentBayElementForm.qml  AdvancedInfoFilamentBaysItem.qml  AdvancedInfoFilamentBaysItemForm.qml  AdvancedInfoForm.qml  AdvancedInfoMiscItem.qml  AdvancedInfoMiscItemForm.qml  AdvancedInfoMotionStatusElement.qml  AdvancedInfoMotionStatusElementForm.qml  AdvancedInfoMotionStatusItem.qml  AdvancedInfoMotionStatusItemForm.qml  AdvancedInfoToolheadElement.qml  AdvancedInfoToolheadElementForm.qml  AdvancedInfoToolheadsItem.qml  AdvancedInfoToolheadsItemForm.qml  AdvancedSettingsPage.qml  AdvancedSettingsPageForm.qml  AnalyticsScreen.qml  AnalyticsScreenForm.qml  AnnealMenu.qml  AnnealMenuForm.qml  AnnealPrint.qml  AnnealPrintForm.qml  AssistedLeveling.qml  (+323 more)
src/qml/test_print/: smallcircle.makerbot  test_print.makerbot
src/qml/videos/: filament_installation.m4v
src/settings_interface/: settings_interface.cpp  settings_interface.h  ui_settings.cpp  ui_settings.h
src/storage/: disk_manager.cpp  disk_manager.h  makerbot_file_meta_reader.cpp  makerbot_file_meta_reader.h  progress_copy.h  storage.cpp  storage.h
src/translations/: generate_qm_files.sh  morepork_de.ts  morepork_es.ts  morepork_es_la.ts  morepork_fr.ts  morepork_it.ts  morepork_ja.ts  morepork_ko.ts  morepork_lupdate.sh  morepork_pr.ts  morepork_ts_qm_update.sh  morepork_ts_update.sh  morepork_zh.ts  translation_ar_EG.qm  translation_ar_EG.ts  translation_de_DE.qm  translation_de_DE.ts  translation_en_GB.qm  translation_en_GB.ts  translation_en_US.ts  translation_es_ES.qm  translation_es_ES.ts  translation_fr_FR.qm  translation_fr_FR.ts  translation_it_IT.qm  translation_it_IT.ts  translation_ja_JP.qm  translation_ja_JP.ts  translation_ko_KR.qm  translation_ko_KR.ts  translation_ru_RU.qm  translation_ru_RU.ts  translation_zh_CN.qm  translation_zh_CN.ts  update_ts_file.sh
test_prints/: check_prints.py  test_print_petg.makerbot  test_print_pla.makerbot  test_print_tough.makerbot
test_prints/fire/: test_print_nylon-cf_pva.makerbot  test_print_nylon_pva.makerbot
test_prints/lava/: test_print_asa.makerbot  test_print_nylon_pva.makerbot  test_print_pc-abs-fr.makerbot  test_print_pc-abs.makerbot  test_print_petg_pva.makerbot  test_print_pla_pva.makerbot
ui/: CMakeLists.txt  InfoItem.qml  InfoItemForm.qml  InfoItemForm.ui.qml  InfoPage.qml  InfoPageForm.qml  InfoPageForm.ui.qml  MainMenu.qml  MainMenuForm.qml  MainMenuForm.ui.qml  MainMenuIconForm.qml  MaterialPageForm.qml  MenuTemplate.qml  MenuTemplateForm.qml  MenuTemplateForm.ui.qml  MoreporkUI.qml  PreheatPage.qml  PrintDrawer.qml  PrintPage.qml  PrintPageForm.qml  PrintPageForm.ui.qml  PrintingDrawer.qml  QtQuickButton.qml  SettingsPage.qml  TestLayout.ui.qml  TopDrawer.qml  media.qrc  ui.qrc
(+34 files in other folders)
